# pharos-network

./: README.md
dapp/calculator-dapp/: abi.json  hardhat.config.js  package-lock.json  package.json
dapp/calculator-dapp/contracts/: Calculator.sol
dapp/calculator-dapp/frontend/: abi.json  index.html  script.js  style.css
dapp/calculator-dapp/scripts/: deploy.js
dapp/foundry/: package.json
dapp/hardhat/: package-lock.json
dapp/hardhat/app/: app.jsx  index.html  package-lock.json  package.json
dapp/hardhat/app/src/: App.jsx
dapp/hardhat/contract/: README.md  package-lock.json  package.json
dapp/hardhat/contract/cache/: solidity-files-cache.json
dapp/hardhat/contract/src/: app.jsx
hardhat/contract/: .gitignore  README.md  package.json
hardhat/contract/contracts/: Token.sol  ZenithToken.sol
hardhat/contract/ignition/modules/: pharosreborn.js
hardhat/contract/scripts/: bulkTransfer.js
interoperability/call-evm-from-wasm/: Cargo.toml
interoperability/call-evm-from-wasm/src/: lib.rs  main.rs
nft/foundry/contract/script/: DeployToken.s.sol  InteractToken.s.sol
nft/foundry/contract/src/: Token.sol
nft/foundry/contract/test/: Token.t.sol
nft/hardhat/contract/: README.md
token/hardhat/contract/: hardhat.config.js
token/rust/contract/: .gitignore  Cargo.toml  README.md
token/rust/contract/scripts/: main.py
transaction/ethersjs/: index.js  package.json
transaction/web3js/: .gitignore  index.js  index_eip1559.js  package.json
transaction/web3py/: main.py  requirements.txt
uniswap/hardhat/contract/: README.md
(+28 files in other folders)
