[package]
name = "erc20"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
mini-alloc = { git = "https://github.com/PharosNetwork/pharos-stylus-sdk-rs", version = "0.7.0" }
stylus-sdk = { git = "https://github.com/PharosNetwork/pharos-stylus-sdk-rs", version = "0.7.0" }

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
